--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "firebase": "^11.9.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "gsap": "^3.13.0",
